# step-functions-agent

./: .gitignore  .markdownlint.json  404.html  AGENT_CORE_MIGRATION.md  AGENT_NAMING_CONVENTIONS.md  AMPLIFY_GEN2_SETUP_GUIDE.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_NOTES.md  LICENSE  LLM_PROVIDER_ANALYSIS.md  LLM_UNIFIED_ARCHITECTURE_ANALYSIS.md  MCP_DEPLOYMENT_GUIDE.md  Makefile  OBSERVABILITY_DEPLOYMENT_CHECKLIST.md  PROVIDER_API_KEY_MAPPING.md  README.md  REFACTORED_ARCHITECTURE.md  REFACTORING_DESIGN.md  UNIFIED_LLM_RUST_AMPLIFY_ARCHITECTURE.md  _config.yml  agent-core-output-web-search-agent.json  amplify.yml  app.py  app_agentcore_wrapper.py  buildspec-router.yml  buildspec.yml  cdk.context.json  fix_agent_properties_placement.py  fix_dependencies.py  index.html  package-lock.json  package.json  pyproject.toml  refactored_app.py  requirements.in  requirements.txt  secret-deletion.md  sitemap.xml  template.yaml  (+9 more)
.github/: RELEASE_PROCESS.md
agent_core/: .bedrock_agentcore.yaml  BROADBAND_CHECKER_README.md  Dockerfile  README.md  agentcore-deployment-web-search-agent.json  broadband_checker_agent.py  broadband_extraction_config.json  broadband_spreadsheet_processor.py  deploy_agentcore.py  deploy_broadband_agent.py  deployment-broadband-checker-us-west-2.json  requirements-lambda.txt  requirements-simple.txt  requirements.txt  shopping_agent.py  simple_web_search_agent.py  web_search_agent.py
amplify/: backend.ts
blog/: atom.xml  index.html  rss.xml
buildspec-templates/: README.md  generate_buildspec.py
cloudformation/: llm-models-table.yaml
lambda/call_llm_rust/: .dockerignore  Cargo.toml  Makefile  README.md  TESTING.md  TEST_EVENTS_README.md  build.sh  collector.yaml  run_tests.sh  test_events.json  verify_build.sh
lambda/call_llm_rust/src/: error.rs  lib.rs  main.rs  models.rs  secrets.rs  service.rs  telemetry.rs
lambda/call_llm_rust/src/transformers/: anthropic.rs  bedrock.rs  gemini.rs  mod.rs  openai.rs  utils.rs
lambda/call_llm_rust/tests/: service_integration_test.rs
lambda/extensions/long-content/: .cdkignore  CLAUDE.md  Cargo.toml  Makefile  NEXT_STEPS.md  README.md  buildspec.yml  samconfig.toml  template-arm.yaml  template-x86.yaml
lambda/extensions/long-content/.github/workflows/: build-deploy.yml
lambda/extensions/long-content/opt/: entrypoint  wrapper
lambda/extensions/long-content/src/: env.rs  lib.rs  main.rs  route.rs  sandbox.rs  stats.rs  transform.rs  transform_complex.rs  transform_improved.rs
lambda/extensions/long-content/tests/: test_function.py
lambda/tools/SemanticSearchRust/: Cargo.toml  README.md  template.yaml
lambda/tools/SemanticSearchRust/notebooks/: populate_database.ipynb
lambda/tools/SemanticSearchRust/src/: event_handler.rs
lambda/tools/SemanticSearchRust/tests/: test-event.json
lambda/tools/WebScraperMemory/: CLAUDE.md  Cargo.toml  README.md  template.yaml
lambda/tools/WebScraperMemory/src/: event_handler.rs  main.rs
lambda/tools/WebScraperMemory/tests/: get-extraction-script-test.json  save-extraction-script-test.json  save-site-schema-test.json  test-event.json
lambda/tools/local-agent/: .lambdaignore  CLAUDE.md  Cargo.toml  GUI_DESIGN.md  LAMBDA_DEPLOYMENT.md  Makefile  PYTHON_ENV_STRATEGY.md  README.md  RUST_EXECUTOR.md  SCRIPT_EXECUTOR_ALTERNATIVES.md  SETUP.bat  SETUP.ps1  UI_COMPONENTS_DETAILED.md  WINDOWS_TESTING_GUIDE.md  daemon_config.json  iam-policy.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run_automation.py  script_executor.py  test_script_executor.py  vite.config.ts
lambda/tools/local-agent/example_scripts/: keyboard_demo_rust.json  mouse_demo_rust.json  test_rust_executor.json  test_rust_minimal.json  textedit_rust_example.json
lambda/tools/local-agent/examples/: image_detection_examples.json  notepad_windows_example.json  textedit_mac_example.json  windows_notepad_test.json  windows_simple_test.json
lambda/tools/local-agent/rust-executor-standalone/: .gitignore  Cargo.toml
lambda/tools/local-agent/rust-executor-standalone/src/: main.rs
lambda/tools/local-agent/src/: App.tsx  lib.rs  main.rs
lambda/tools/local-agent/src-tauri/: Cargo.toml  tauri.conf.json
lambda/tools/local-agent/src-tauri/src/: commands.rs  main.rs  rust_automation.rs
lambda/tools/local-agent/src/components/Layout/: Sidebar.tsx  StatusBar.tsx
lambda/tools/local-agent/src/components/Screens/: ConfigScreen.tsx  LogsScreen.tsx  MonitorScreen.tsx  TestScreen.tsx
lambda/tools/local-agent/src/styles/: globals.css
lambda/tools/local-agent/tests/: integration_test.rs  test_pyautogui_integration.rs  test_script_executor.py
lambda/tools/local-browser-agent/schema-factory/: Cargo.toml  README.md  TEMPLATE_REGISTRY_SCHEMA.md
lambda/tools/local-browser-agent/schema-factory/examples/: broadband_availability.json
lambda/tools/local-browser-agent/schema-factory/src/: generator.rs  main.rs  schema.rs  templates.rs  validator.rs
lambda/tools/local-browser-agent/schema-factory/src/commands/: deploy.rs  generate.rs  list.rs  migrate.rs  mod.rs  test.rs  validate.rs
lambda/tools/local-browser-agent/schema-factory/templates/: batch_mapping.json.hbs  browser_script.json.hbs  cdk_stack.py.hbs  output_tool_spec.json.hbs  tool_spec.json.hbs  validator.py.hbs
lambda/tools/local-browser-agent/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
lambda/tools/local-browser-agent/src-tauri/examples/: test_activity_connection.rs
lambda/tools/local-browser-agent/src-tauri/icons/: .gitkeep  icon.icns
lambda/tools/local-browser-agent/src-tauri/src/: activity_poller.rs  commands.rs  config.rs  config_commands.rs  main.rs  nova_act_executor.rs  paths.rs  profile_commands.rs  script_executor.rs  session_manager.rs  test_commands.rs
ui_amplify/amplify/mcp-server/rust-mcp-server/: BUILD_NOTES.md  Cargo.toml  Makefile
ui_amplify/amplify/mcp-server/rust-mcp-server/src/: agents.rs  auth.rs  main.rs
wasm-mcp-client/: Cargo.toml  VERIFICATION_SUCCESS.md  WASM_COMPILATION_ISSUE.md  WASM_RESOURCES_PROMPTS_COMPILATION_ISSUE.md
wasm-mcp-client/src/: lib.rs
(+1082 files in other folders)
