[project]
name = "step-functions-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.35.0",
    "e2b-code-interpreter==1.0.0",
    "ipykernel>=6.29.5",
    "psutil>=6.1.0",
    "python-dotenv==1.0.1",
]
