[package]
name = "mcp-management-wasm-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use local pmcp SDK for latest version with WASM fixes
pmcp = { path = "/Users/guy/Development/mcp/sdk/rust-mcp-sdk", default-features = false, features = ["wasm"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Request",
  "RequestInit",
  "RequestMode", 
  "Response",
  "Headers",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
]