[package]
name = "unified-llm-service"
version = "0.1.0"
edition = "2021"

# Lambda runtime settings
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# Lambda runtime
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# AWS SDK
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.49"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# OpenTelemetry
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["http-proto", "trace", "metrics", "reqwest-client"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
tracing-opentelemetry = "0.25"

# Utilities
once_cell = "1.20"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

# Performance
lru = "0.12"
dashmap = "6.1"

[profile.release]
# Optimize for Lambda
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
dotenv = "0.15"
tokio-test = "0.4"
pretty_assertions = "1.4"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]