[package]
name = "aws-lambda-runtime-api-proxy-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
once_cell = "1.20.3"
parking_lot = "0.12.3"
tokio = { version = "1.44.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
hyper = { version = "0.14.28", features = ["client", "server", "runtime", "tcp", "stream", "http1"] }
httprouter = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"

# AWS SDK
aws-config = "1.5.18"
aws-sdk-dynamodb = "1.67.0"
aws-smithy-types = "1.2.13"

[features]
default = []
