[package]
name = "SemanticSearchRust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
qdrant-client = "1.13.0"
serde = "1.0.217"

anyhow = "1.0"
reqwest =  { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
aws-sdk-secretsmanager = "1.63.0"
aws-sdk-ssm = "1.63.0"
aws-config = "1.5.16"