[package]
name = "WebScraperMemory"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0"
aws-config = "1.5.17"
aws-sdk-dynamodb = "1.66.0"
url = "2.4.1"
tracing = "0.1"
async-trait = "0.1.74"

