[package]
name = "local_sfn_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.17"
aws-sdk-sqs = "1.60.0"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
config = "0.15.8"
log = "0.4.17"
env_logger = "0.11.6"
futures = "0.3.28"
anyhow = "1.0.71"
aws-sdk-sfn = "1.64.0"
tempfile = "3.8.0"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.8.0"
aws-smithy-types = "1.2.13"
test-log = "0.2.12"
