[package]
name = "local_sfn_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1" }
# aws-credential-types removed
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
config = { version = "0.14" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
futures = { version = "0.3" }
anyhow = { version = "1" }
aws-sdk-sfn = { version = "1" }
tempfile = { version = "3" }
# url, idna, unicode-bidi, unicode-normalization removed

[dev-dependencies]
mockall = { version = "0.12" }
tempfile = { version = "3" } # Aligned with [dependencies]
aws-smithy-types = { version = "1" }
test-log = { version = "0.2" }
