[package]
name = "local-agent-gui"
version = "0.2.0"
description = "Local Agent GUI for Step Functions Activity polling"
authors = ["Step Functions Agent Team"]
license = "MIT"
repository = ""
default-run = "local-agent-gui"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
# Tauri dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.3", features = ["shell-open", "dialog-all", "fs-all"] }

# AWS SDK
aws-config = "1.5.17"
aws-sdk-sfn = "1.64.0"

# Async runtime
tokio = { version = "1.28.0", features = ["full"] }

# State management
lazy_static = "1.4.0"

# Date/time
chrono = "0.4"

# Configuration
config = "0.15.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# File handling
tempfile = "3.8"

# GUI automation (to replace PyAutoGUI)
# Note: rsautogui is not yet available on crates.io, we'll use enigo for now
enigo = "0.2"
screenshots = "0.8"

# State management
once_cell = "1.21"
parking_lot = "0.12"

# System directories
dirs = "5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
