[package]
name = "schema-factory"
version = "0.1.0"
edition = "2021"
authors = ["Schema Factory Team"]
description = "CLI tool for generating browser automation extraction agents from canonical schemas"

[[bin]]
name = "schema-factory"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tera = "1.20"
jsonschema = "0.18"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
colored = "2.1"
walkdir = "2.5"
handlebars = "5.1"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
