[package]
name = "step-functions-agents-mcp-server"
version = "1.0.0"
edition = "2021"

[dependencies]
# Lambda runtime
lambda_http = "0.13"
lambda_runtime = "0.13"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# API key authentication
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# AWS SDK
aws-sdk-dynamodb = "1.0"
aws-sdk-sfn = "1.0"
aws-config = { version = "1.0", features = ["behavior-version-latest"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"